--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "express": "~4.14.0",
+    "express": "^4.17.1",
     "grunt-cli": "~1.2.0",
     "mustache": "~2.2.1",
     "socket.io": "^1.4.8"
@@ -35,9 +35,9 @@
     "grunt-contrib-jshint": "~0.11.3",
     "grunt-contrib-qunit": "~1.2.0",
     "grunt-contrib-uglify": "~0.9.2",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-sass": "^3.1.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-retire": "~0.3.10",
+    "grunt-sass": "^3.1.0",
     "grunt-zip": "~0.17.1",
     "node-sass": "^4.13.1"
   },
